--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 body {
     margin: 0px;
     padding: 0px;
@@ -16,7 +17,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color:  #725C5C;
     background-color: #FDF1EB;
-    height: 9%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,10 +58,18 @@ body {
     border-radius: 3px;
     width: 100px;
     height: 35px;
-    margin-left: 20%
+    margin-left: 20%;
+    display: flex;
+    align-items: center;
 }
 .lista-idiomas {
+    border: 2px solid #ECECEC;
+    border-radius: 4px;
     display: none;
+    background-color: #fff;
+    position:absolute;
+    margin-left: 20px;
+    width: 95px;
 }
 
 .login-principal {
@@ -74,6 +83,9 @@ body {
     
 }
 
+.texto-escondido {
+    display: none;
+}
 
 .bemvindo{
     margin-bottom: 0%;
@@ -151,6 +163,12 @@ hr {
 
 .todo-conteudo{
     display: flex;
+    flex-direction: column;
+}
+
+.video-detalhes{
+    display: flex;
+    
 }
 
 .titulo-video{
@@ -158,7 +176,7 @@ hr {
     display:flex;
     flex-direction:column;
     width: 70%;
-    margin-left: 4%;
+    margin-left: 3%;
 }
 
 .titulo-artigo{
@@ -167,4 +185,256 @@ hr {
     font-size: 20px;
     font-weight: 900;
     margin-right: 5%;
+}
+
+
+
+.botoes-detalhes{
+    margin-left: 4%;
+    margin-top: 2%;
+}
+
+.bloco-botoes{
+    display: flex;
+    margin-left: 17.5%;
+}
+
+.botao-download{
+    color: #FFF;
+    background: #ED7839;
+    border-radius: 4px;
+    border: none;
+    padding: 8px;
+}
+
+.botao-favorito{
+    background: #ED7839;
+    border-radius: 4px;
+    border: none;
+    padding: 3px; 
+    width: 45px;
+    margin-left: 10px;
+    margin-right: 10px
+}
+
+.botao-doi{
+    background: #ED7839;
+    border-radius: 4px;
+    border: none;
+    padding: 3px;
+    width: 45px;
+}
+
+.citar-trabalho{
+    font-family: 'Roboto', sans-serif;
+    color: #ED7839;
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 17.5%;
+}
+
+.bloco-detalhes{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Roboto', sans-serif;
+    color:  #4E4E4E;
+    margin-right: 12%;
+    margin-top: -8%
+}
+
+.titulo-detalhes{
+    display: flex;
+    font-weight: 600;
+    font-size: 20px;
+    border: 1px solid #ECECEC;
+    border-radius: 3px;
+    background-color: #FDF1EB;
+    margin-bottom: 0px;
+    padding: 10px;
+}
+
+.detalhes-item{
+    color: #5C5C5C;
+    font-weight: 400;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    list-style: none;
+    border: 1px solid #ECECEC;
+    margin-top: 0px;
+    padding: 0px 15px
+}
+
+.item-universidades{
+    font-family: 'Quicksand', sans-serif;
+}
+
+.resumo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border: 1px solid #ECECEC;
+    border-radius: 3px;
+}
+
+.bloco-resumo{
+    display: flex;
+    color: #4E4E4E;
+    background-color: #FDF1EB;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    width: 100%;
+}
+
+.resumo-titulo{
+    margin-left: 2%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.resumo-conteudo{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #5C5C5C;
+    padding: 0px 15px
+}
+
+.discussao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border: 1px solid #ECECEC;
+    border-radius: 3px;
+}
+
+.bloco-discussao{
+    display: flex;
+    color: #4E4E4E;
+    background-color: #FDF1EB;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    width: 100%;
+}
+
+.titulo-discussao{
+    margin-left: 2%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.compartilhar{
+    font-family: 'Roboto', sans-serif;
+    color: #ED7839;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 5%;
+}
+
+.bloco-imagens{
+    display: flex;
+}
+
+.voce-sabia{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    width: 70%;
+    text-align: center;
+}
+
+.botao-topico{
+    display: flex;
+    background: linear-gradient(180deg, #FEB254 0%, #F0813D 100%);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
+    border-radius: 4px;
+    border: none;
+    color: #FFF;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    padding: 5px;
+    align-items: center;
+    margin-top: -20%;
+}
+
+hr{
+    width: 90%;
+    margin-top: 2%;
+}
+
+.campo-perguntas{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    align-items: center; 
+    padding: 5px;
+}
+
+.pergunta{
+    font-family: 'Quicksand', sans-serif;
+    border: 1px solid #E7E7E7;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    margin-bottom: 3%;
+    
+}
+
+.assunto{
+    color: #ED7839;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 0%;
+    margin-top: 2%;
+    margin-left: 2%;
+}
+
+.nome{
+    color: #5C5C5C;
+    font-size: 12px; 
+    font-weight: 600;
+    margin-top: 0%;
+    margin-bottom: 1%;
+    margin-left: 2%;
+}
+
+.texto-pergunta{
+    color: #4D4D4D;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0%;
+    margin-left: 2%;
+    margin-bottom: 0%;
+}
+
+.acoes{
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
+}
+
+.likes{
+    font-size: 14px;
+    color: #757575;
+    margin-left: 2%;
+}
+
+.respostas{
+    font-size: 14px;
+    color: #757575;
+    margin-left: 2%;
+}
+
+.rodape{
+    display: flex;
+    margin-top: 3%;
+    margin-left: 3%;
 }
