--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ body {
 
 .botao-idiomas{
     background-color: #FDF1EB;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400; 
     color:  #333333;
     border: 1px solid #CCCCCC;
     border-radius: 3px;
@@ -62,7 +64,14 @@ body {
     display: flex;
     align-items: center;
 }
+
+.botao-idiomas:hover{
+    border: 1px solid  #333333;
+    cursor:pointer;
+}
+
 .lista-idiomas {
+    font-family: 'Quicksand', sans-serif;
     border: 2px solid #ECECEC;
     border-radius: 4px;
     display: none;
@@ -83,9 +92,7 @@ body {
     
 }
 
-.texto-escondido {
-    display: none;
-}
+
 
 .bemvindo{
     margin-bottom: 0%;
@@ -207,6 +214,13 @@ hr {
     padding: 8px;
 }
 
+.botao-download:hover {
+    cursor: pointer;
+    background-color: #f68e56;
+
+}
+
+
 .botao-favorito{
     background: #ED7839;
     border-radius: 4px;
@@ -217,12 +231,22 @@ hr {
     margin-right: 10px
 }
 
+.botao-favorito:hover {
+    cursor: pointer;
+    background-color: #f68e56;
+}
+
 .botao-doi{
     background: #ED7839;
     border-radius: 4px;
     border: none;
     padding: 3px;
     width: 45px;
+}
+
+.botao-doi:hover {
+    cursor: pointer;
+    background-color: #f68e56;
 }
 
 .citar-trabalho{
@@ -304,7 +328,30 @@ hr {
     padding: 0px 15px
 }
 
-.discussao{
+#botaoVerMais{
+    display: flex;
+    margin-bottom: 5px;
+    margin-top: -10px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    color: #ED7839;
+    border: none;
+    background-color: #FFF;
+}
+
+
+
+#botaoVerMais:hover {
+    cursor: pointer;
+}
+
+
+#textoEscondido {
+    display: none;
+}
+
+#discussao{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -364,6 +411,101 @@ hr {
     align-items: center;
     margin-top: -20%;
 }
+
+.botao-topico:hover{
+    cursor: pointer;
+    background: #f68e56;
+}
+
+#divFormulario{
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border: 1px solid #ECECEC;
+    border-radius: 3px;
+    display: none;
+}
+
+.bloco-formulario{
+    display: flex;
+    color: #4E4E4E;
+    background-color: #FDF1EB;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    width: 100%;
+}
+
+
+
+.duvida{
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.campo-formulario {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin-left: -60%;
+}
+
+.label {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    size: 16px;
+    color: #ED7839;
+}
+
+#assunto {
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    width: 237%;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+#conteudo{
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    width: 237%;
+    height: 30%;
+    padding: 20px 10px;
+    resize: none;
+    border-bottom: 0px;
+}
+
+
+.div-botao-formulario{
+    display: flex;
+    background: #EAF1F2;
+    border: 1px solid #CCCCCC;
+    box-sizing: border-box;
+    border-radius: 0px 0px 4px 4px;
+    width: 237%;
+    margin-top: 0px;
+
+}
+
+.botao-formulario{
+    background: linear-gradient(180deg, #FEB154 0%, #F1833E 100%);
+    color: #fff;
+    border-radius: 0px 0px 4px 0px;
+    margin-left: 82.8%;
+    border: none;
+    padding: 5px 80px;
+}
+
+
 
 hr{
     width: 90%;
