--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,8 @@ hr {
 
 }
 
+
+
 .botao-formulario{
     background: linear-gradient(180deg, #FEB154 0%, #F1833E 100%);
     color: #fff;
@@ -503,6 +505,11 @@ hr {
     margin-left: 82.8%;
     border: none;
     padding: 5px 80px;
+}
+
+.botao-formulario:hover{
+    cursor: pointer;
+    background: #FEB154;
 }
 
 
@@ -519,6 +526,20 @@ hr{
     width: 95%;
     align-items: center; 
     padding: 5px;
+}
+
+#cardTopico{
+    display: none;
+    /* display: flex; */
+    flex-direction: column;
+    margin-top: 0%;
+}
+
+#cardTopico2{
+    display: none;
+    /* display: flex; */
+    flex-direction: column;
+    margin-top: 0%;
 }
 
 .pergunta{
@@ -563,16 +584,130 @@ hr{
     margin-left: 2%;
 }
 
+.botao-respostas{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    color: #757575;
+    background-color: #FFF;
+    border: none;
+    margin-left: 2%;
+}
+
+.botao-respostas:hover{
+    cursor: pointer;
+}
+
 .likes{
     font-size: 14px;
     color: #757575;
     margin-left: 2%;
 }
 
-.respostas{
+/* .respostas{
     font-size: 14px;
     color: #757575;
     margin-left: 2%;
+} */
+
+#feedbackEnviado{
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 3%;
+    border: 1px solid #ECECEC;
+    border-radius: 3px;
+    display: none;
+}
+
+.bloco-feedback{
+    display: flex;
+    color: #4E4E4E;
+    background-color: #FDF1EB;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    width: 100%;
+}
+
+.topico-enviado{
+    font-family: 'Roboto', sans-serif;
+    color: #ED7839;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 8%;
+    margin-bottom: 2%;
+}
+
+.agradecimento{
+    display: flex;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    width: 70%;
+    text-align: center;
+    margin-bottom: 1%;
+}
+
+.descobrir-trabalhos{
+    display: flex;
+    justify-content: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    width: 70%;
+    text-align: center;
+    margin-bottom: 3%;
+    
+}
+
+.campo-pergunta-nova{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    align-items: center; 
+    padding: 5px;
+    margin-bottom: -6%;
+}
+
+.div-sobreposta{
+    background-color: rgb(221, 221, 221, 0.9);
+    margin-top: -11.1%;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    align-items: center;
+    padding: 17px 0px;
+    margin-bottom: -2%;
+    border-radius: 4px;
+    border: 1px solid #E7E7E7;
+}
+
+.imagem-aguardando{
+    margin-top: 2%;
+}
+
+.aguardando{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    color: #707070;
+    margin-bottom: 0%;
+    margin-top: 3%;
+}
+
+.editar-topico{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #ED7839;
+    margin-top: 3%;
 }
 
 .rodape{
